@@ -1,3 +1,7 @@
+  27 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
+  openttd: corrected openmedia dependencies
+
   21 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
   openttd: doc use flag for nightly
